<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1_browsePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="browsePageClick"
        android:text="@string/OpenBaidu" />

    <Button
        android:id="@+id/button2_openDialPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDialPageClick"
        android:text="@string/OpenCall01" />

    <Button
        android:id="@+id/button3_dialPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dialPhoneClick"
        android:text="@string/OpenCall02" />

    <Button
        android:id="@+id/button4_openMsgPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openMsgPageClick"
        android:text="@string/OpenMassage01" />

    <Button
        android:id="@+id/button5_sendMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMsgClick"
        android:text="@string/OpenMassage02" />

    <Button
        android:id="@+id/button6_playMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="playMusicClick"
        android:text="@string/OpenMusic" />

    <Button
        android:id="@+id/button7_uninstall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="uninstallClick"
        android:text="@string/Uninstall" />

    <Button
        android:id="@+id/button8_install"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="installClick"
        android:text="@string/Install" />

</LinearLayout>